story #12306 build: upgrade to java 17
changes:
* update project dependencies for java 17
* replace flatdoodle for testcontainers
* update mongo to 7.0.8
* replace vitam ui logger by slf4j one
* update several tests to junit 5
* remove easymock and powermock